# taskbar-lyric

./: Cargo.toml
src/: lib.rs  logger.rs  tray_watcher.rs  uia.rs  uia_watcher.rs  utils.rs
src/strategy/: mod.rs  win10.rs  win11.rs
