[package]
name = "taskbar-lyric"
version = "0.1.0"
edition = "2024"

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
anyhow = "1"
winreg = "0.55"
tracing = { version = "0.1", optional = true }
windows-core = "0.62.2"

[dependencies.windows]
version = "0.62"
features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_Security",
  "Win32_System_Com",
  "Win32_UI_Accessibility",
  "Win32_System_Variant",
  "Win32_System_Ole",
]

[dev-dependencies]
serial_test = "3.3"

# Clippy Lints
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"

doc_markdown = "allow"
missing_panics_doc = "allow"
significant_drop_tightening = "allow"
missing_errors_doc = "allow"
